# NEA

./: .gitignore  :w  Cargo.toml  bibliography.yml  build.rs  default.nix  paperwork.typ  readme.md  summary_statement.md  todo.md  todo.txt
shaders/: Cargo.toml
shaders/src/: evolve_spectra.rs  fft.rs  fourier_transform.rs  initial_spectra.rs  lib.rs  process_deltas.rs  skybox.rs  ui.rs
shaders/src/sim/: fft.rs  initial_spectra.rs  mod.rs  process_deltas.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: engine.rs  game.rs  main.rs  renderer.rs  renderpass.rs  scene.rs  simulation.rs  standardpass.rs  ui.rs  util.rs
src/engine/: mod.rs  renderer.rs  scene.rs  ui.rs  util.rs
src/sim/: cascade.rs  compute.rs  fft.rs  mod.rs  simdata.rs  util.rs
