[package]
name = "nea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = { version = "23.0.1", features = ["spirv"] }
pollster = "0.3"
log = "0.4"
glam = { version = "0.29", features = ["mint"]}
env_logger = "0.10"
rand = "0.8.5"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "exr"]}
obj-rs = "0.7.1"
imgui = "0.12.0"

shared = { path = "./shared" }

[build-dependencies]
spirv-builder = { git="https://github.com/Rust-GPU/rust-gpu", default-features = false, features = ["use-installed-tools"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustflags = ["-Zshare-generics=off"]
